--- a/source/dev/_/blocks/footer/footer.pug
+++ b/source/dev/_/blocks/footer/footer.pug
@@ -74,19 +74,19 @@ footer.footer
 				.modal__text= text
 				.modal__form
 					if attributes.select
-						.modal__select.select.--md.--bg-gray
-							.select__label
-							.select__wrap
-								.select__block
-									.select__icon
-										img(src="" alt="")
-									.select__title
-								.select__list
-									.select__item.check
-										input.select__input(type="radio" name="messenger" value="whatsapp")
-										.select__icon
-											img(src="" alt="")
-										.select__title
+						// .modal__select.select.--md.--bg-gray
+						// 	.select__label
+						// 	.select__wrap
+						// 		.select__block
+						// 			.select__icon
+						// 				img(src="" alt="")
+						// 			.select__title
+						// 		.select__list
+						// 			.select__item.check
+						// 				input.select__input(type="radio" name="messenger" value="whatsapp")
+						// 				.select__icon
+						// 					img(src="" alt="")
+						// 				.select__title
 					if attributes.square
 						.modal__input.input.--md.--bg-gray
 							.input__label Площадь, м#[sup 2]
