--- a/source/dev/_/components/btn/btn.sass
+++ b/source/dev/_/components/btn/btn.sass
@@ -37,3 +37,16 @@
 		color: #fff
 		background-color: #2a88d1
 		box-shadow: inset 5px 5px 20px rgba(255, 255, 255, 0.35)
+		path
+			fill: #ffffff
+		&:hover
+			background-color: #009cff
+			box-shadow: 0 1px 50px rgba(0, 156, 255, 0.4), inset 5px 5px 20px rgba(255, 255, 255, 0.55)
+	&.--disabled
+		cursor: default !important
+		color: rgba(72,78,81,0.6) !important
+		background-color: #f4f4f4 !important
+		box-shadow: inset 5px 5px 20px rgba(255, 255, 255, 0.35) !important
+		path
+			fill: #000
+			opacity: 0.35
