--- a/source/dev/_/components/select/select.sass
+++ b/source/dev/_/components/select/select.sass
@@ -5,5 +5,73 @@
 	position: relative
 	transition: .3s
 	cursor: pointer
-	select
+	&__wrap
+		position: relative
+	&__block
+		z-index: 2
+		position: relative
+		display: flex
+		align-items: center
+	&__icon
+		min-width: 12px
+		margin-right: 12px
+	&__title
+		width: 100%
+		white-space: nowrap
+	&__list
+		z-index: 1
+		position: absolute
+		top: 100%
+		left: 0
+		right: 0
+		margin-top: -5px
+		overflow: hidden
+		transition: .3s
+		border-radius: 0 0 5px 5px
+		opacity: 0
+		visibility: hidden
+		transform: translateY(10px)
+	&__item
+		transition: .3s
+		&-wrap
+			display: flex
+			align-items: center
+		// background-color: #000
+
+	&__input
 		display: none
+		
+	&.--md
+		.select
+			&__label
+				opacity: 0.7
+				font-size: 14px
+				margin-bottom: 10px
+			&__block
+				height: 68px
+				padding-left: 32px
+				padding-right: 45px
+			&__title
+				font-size: 14px
+			&__item
+				padding: 10px 32px
+	&.--bg-gray
+		.select
+			&__label
+				opacity: 0.7
+			&__block
+				border-radius: 5px
+				background-color: #f4f4f4
+				box-shadow: inset 4px 4px 10px rgba(0, 0, 0, 0.05)
+			&__item
+				background-color: #f4f4f4
+				&:hover, &.--checked
+					background-color: darken(#f4f4f4, 5%)
+	&.--open
+		.select
+			&__list
+				opacity: 1
+				visibility: visible
+				transform: translateY(0px)
+				
+		
