--- a/source/dev/_/sys/sass/style.sass
+++ b/source/dev/_/sys/sass/style.sass
@@ -988,3 +988,37 @@ sup
 		width: 290px
 		border-left: 1px solid #eee
 	
+
+.c-thanks
+	padding-top: 20px
+	&__title
+		margin-bottom: 22px
+	&__form
+		margin-left: -15px
+		margin-right: -15px
+		margin-bottom: -30px
+		align-items: flex-end
+	&__item
+		width: calc(100% / 2 - 30px)
+		margin-left: 15px
+		margin-right: 15px
+		margin-bottom: 30px
+	&__btn-desc
+		opacity: 0.5
+		font-size: 12px
+		line-height: 19px
+		padding-bottom: 5px
+		
+		
+.b-gifts
+	&__head
+		padding: 74px 50px 42px 40px
+		border-bottom: 1px solid #eee
+	&__item
+		display: flex
+		align-items: center
+		border-bottom: 1px solid #eee
+		&:last-of-type
+			border-bottom: none
+	&__img
+		margin-left: auto
