--- a/source/dev/_/parts/fix.pug
+++ b/source/dev/_/parts/fix.pug
@@ -4,37 +4,38 @@
 			.fix__content
 				.fix__subtitle.h2 Если штукатурка потрескается #[br]или произойдут другие проблемы,
 				.fix__title.h1 мы исправим #[br]все #[strong за свой счет] 
-				.fix__warranty
-					.warranty__title По договору гарантируем:
+				.fix__warranty.warranty
+					.warranty__title.h3 По договору гарантируем:
 					.warranty__list.row
 						.warranty__item Гладкие стены под подраску
 						.warranty__item Ровные углы 90#[sup °]
 						.warranty__item Поверхности без дефектов и перепадов
 						.warranty__item Стены без трещин
 				.fix__img
-					img(src="" alt="")
+					img(src="_/uploads/paper.png" alt="")
 				.fix__count
 					.fix__count-icon
-						img(src="" alt="")
+						img(src="_/uploads/shield.png" alt="")
 					.fix__count-value Выдаем #[br]гарантию #[br]3 года
-		.fix__list.row
-			.fix__item
-				.fix__icon
-					img(src="" alt="")
-				.fix__name Соблюдаем СНиП и ГОСТ
-				.fix__text При необходимости подготовим #[br]полный комплект исполнительной #[br]документации
-			.fix__item
-				.fix__icon
-					img(src="" alt="")
-				.fix__name Подписываем договор 
-				.fix__text Мы прописали в договоре #[br]каждую мелочь, чтобы #[br]обезопасить вас #[br]#[a(href="") Посмотреть договор]
-			.fix__item
-				.fix__icon
-					img(src="" alt="")
-				.fix__name Берем аванс 30%
-				.fix__text при заезде бригады на объект — #[br]остальная часть после приемки
-			.fix__item
-				.fix__icon
-					img(src="" alt="")
-				.fix__name Укладываемся в срок
-				.fix__text или платим штраф 2500₽ #[br]за каждый день задержки
+		.fix__list
+			.fix__list-wrap.row
+				.fix__item
+					.fix__icon
+						img(src="_/uploads/fix-1.png" alt="")
+					.fix__name Соблюдаем СНиП и ГОСТ
+					.fix__text При необходимости подготовим #[br]полный комплект исполнительной #[br]документации
+				.fix__item
+					.fix__icon
+						img(src="_/uploads/fix-2.png" alt="")
+					.fix__name Подписываем договор 
+					.fix__text Мы прописали в договоре #[br]каждую мелочь, чтобы #[br]обезопасить вас #[br]#[a(href="") Посмотреть договор]
+				.fix__item
+					.fix__icon
+						img(src="_/uploads/fix-3.png" alt="")
+					.fix__name Берем аванс 30%
+					.fix__text при заезде бригады на объект — #[br]остальная часть после приемки
+				.fix__item
+					.fix__icon
+						img(src="_/uploads/fix-4.png" alt="")
+					.fix__name Укладываемся в срок
+					.fix__text или платим штраф 2500₽ #[br]за каждый день задержки
