--- a/source/dev/_/parts/foreman.pug
+++ b/source/dev/_/parts/foreman.pug
@@ -1,23 +1,27 @@
-.foreman
+.foreman.bg-wrap
 	.case
 		.foreman__wrap.row
 			.foreman__img-wrap
 				.foreman__person.person
 					.person__icon
-						img(src="" alt="")
+						img(src="_/uploads/avatar.png" alt="")
 					.person__name Михаил #[br]Воронин
 					.person__position Старший #[br]бригадир
 				.foreman__img
-					img(src="" alt="")
+					img(src="_/uploads/voronin-1.png" alt="")
 			.foreman__content
 				.foreman__subtitle.h2 После старта работы за вами
 				.foreman__title.h1 будет закреплен #[br]персональный #[br]бригадир,
 				.foreman__desc #[strong Который будет на связи 24/7] во время работ
 				.foreman__report.report
 					.report__img
-						img(src="" alt="")
+						img(src="_/uploads/quote-whatsapp.png" alt="")
 					.report__text #[strong Ежедневно отчитывается #[br]в WhatsApp] о проделанных работах
 				.foreman__quote
 					.foreman__quote-icon
+						img(src="_/uploads/star-quote.png" alt="")
 					.foreman__quote-text Я буду работать на объекте и принимать от вас пожелания #[br]до тех пор, пока вы не станете довольны результатом на 100%
 				a.foreman__btn.btn.--md.--bg-blue(href="") РАССЧИТАТЬ СТОИМОСТЬ
+
+	.foreman__bg.bg
+		img(src="_/uploads/foreman-bg.png" alt="")
