--- a/source/dev/_/parts/intro.pug
+++ b/source/dev/_/parts/intro.pug
@@ -15,7 +15,7 @@
 			.round__wrap
 				.round__img
 					img(src="_/uploads/hand.png" alt="")
-				.round__text Оштукатурили 1500+ #[br]домов с 2018 года
+				.round__text ОШТУКАТУРИЛИ 1500+ #[br]ДОМОВ С 2018 ГОДА
 
 		.intro__img
 			img(src="_/uploads/intro-img.png" alt="")
