--- a/source/dev/_/parts/oneday.pug
+++ b/source/dev/_/parts/oneday.pug
@@ -6,22 +6,22 @@
 			.oneday__item
 				.oneday__text #[strong В 3 раза быстрее,] #[br]чем если бы вы заказывали #[br]ручную штукатурку
 				.oneday__icon
-					img(src="" alt="")
+					img(src="_/uploads/oneday-1.png" alt="")
 			.oneday__item
 				.oneday__text #[strong До 40% выгоднее] #[br]по сравнению с ручным #[br]способом за счет автоматики
 				.oneday__icon
-					img(src="" alt="")
+					img(src="_/uploads/oneday-2.png" alt="")
 			.oneday__item
 				.oneday__text #[strong Стены не требуют шпаклевания] #[br]- после нашей работы #[br]поверхности гладкие и ровные
 				.oneday__icon
-					img(src="" alt="")
+					img(src="_/uploads/oneday-3.png" alt="")
 		.oneday__img
-			img(src="" alt="")
+			img(src="_/uploads/oneday-img.png" alt="")
 		.oneday__round.round
 			.round__wrap
 				.round__img
-					img(src="" alt="")
-				.round__text На объекте работает #[br]#[strong команда от 3 до 8 человек] #[br]под контролем старшего #[br]бригадира
+					img(src="_/uploads/group.png" alt="")
+				.round__text.--md На объекте работает #[br]#[strong команда от 3 до 8 человек] #[br]под контролем старшего #[br]бригадира
 
 	.oneday__bg.bg
-		img(src="" alt="")
+		img(src="_/uploads/oneday-bg.png" alt="")
