--- a/source/dev/_/parts/whatsapp.pug
+++ b/source/dev/_/parts/whatsapp.pug
@@ -1,8 +1,9 @@
 .whatsapp
 	.case
-		.whatsapp__title.h1 НЕт ВРЕМЕНИ #[br]НА ЗВОНКИ?
-		.whatsapp__img
-			img(src="" alt="")
-		.whatsapp__content
-			.whatsapp__subtitle НАПИШИТЕ НАМ В #[img(src="" alt="")] whatsapp в один клик
-			a.whatsapp__btn.btn.--md.--bg-green(href="") НАПИСАТЬ В WHATSAPP
+		.whatsapp__wrap.row
+			.whatsapp__title.h1 НЕТ ВРЕМЕНИ #[br]НА ЗВОНКИ?
+			.whatsapp__img
+				img(src="_/uploads/whatsapp-phone.png" alt="")
+			.whatsapp__content
+				.whatsapp__subtitle.h3 НАПИШИТЕ НАМ В #[img(src="_/uploads/whatsapp.svg" alt="")] whatsapp в один клик
+				a.whatsapp__btn.btn.--md.--bg-green(href="") НАПИСАТЬ В WHATSAPP
