--- a/source/dev/_/templates/default.pug
+++ b/source/dev/_/templates/default.pug
@@ -33,3 +33,4 @@ html(lang="ru")
 			+script('input', 'components')
 			+script('check', 'components')
 			+script('select', 'components')
+			+script('slider', 'components')
