--- a/source/dev/_/components/btn/btn.css
+++ b/source/dev/_/components/btn/btn.css
@@ -48,6 +48,11 @@
   background-color: #009cff;
   box-shadow: 0 1px 50px rgba(0, 156, 255, 0.4), inset 5px 5px 20px rgba(255, 255, 255, 0.55);
 }
+.btn.--bg-green {
+  color: #fff;
+  background-color: #4caf50;
+  box-shadow: inset 5px 5px 20px rgba(255, 255, 255, 0.35);
+}
 .btn.--disabled {
   cursor: default !important;
   color: rgba(72, 78, 81, 0.6) !important;
