--- a/source/dev/_/parts/de.pug
+++ b/source/dev/_/parts/de.pug
@@ -3,27 +3,27 @@
 		.de__wrap.row
 			.de__img-wrap
 				.de__img
-					img(src="" alt="")
+					img(src="_/uploads/tool-1.png" alt="")
 				.de__round.round
 					.round__wrap
 						.round__img
-							img(src="" alt="")
+							img(src="_/uploads/pft-logo.png" alt="")
 						.round__text
-							p 13 штукатурных #[br]станций PFT Ritmo XL
+							p 13 ШТУКАТУРНЫХ #[br]СТАНЦИЙ PFT RITMO XL
 							p Стоимость одной - #[br]700 000 руб.
 			.de__content
-				.de__title.h1 используем #[br]#[img(src="" alt="")] #[strong немецкое #[br]оборудование]
+				.de__title.h1 используем #[br]#[img(src="_/uploads/germany.png" alt="")] #[strong немецкое #[br]оборудование]
 				.de__subtitle.h2 которое сэкономит ваш бюджет #[br]при чистовых работах
 				.de__quality.quality
 					.quality__icon
-						img(src="" alt="")
+						img(src="_/uploads/house-broken.png" alt="")
 					.quality__text
 						.quality__title Трещин и отслаиваний не будет
 						.quality__desc Гарантируем плотное сцепление с поверхностью #[br]за счет максимального давления в 30 бар
 				.de__photos.row
 					a.de__photo(href="javascript:;" data-fancybox="" data-src="")
-						img(src="" alt="")
+						img(src="_/uploads/de-img-1.png" alt="")
 					a.de__photo(href="javascript:;" data-fancybox="" data-src="")
-						img(src="" alt="")
-	.de__img
-		img(src="" alt="")
+						img(src="_/uploads/de-img-2.png" alt="")
+	.de__bg.bg
+		img(src="_/uploads/de-bg.png" alt="")
