--- a/source/dev/_/parts/economy.pug
+++ b/source/dev/_/parts/economy.pug
@@ -1,31 +1,31 @@
-.economy
+.economy.bg-wrap
 	.case
 		.economy__title.h1 #[strong сэкономим вам #[br]до 30%] на материалах
 		.economy__subtitle закупаем штукатурку напрямую с завода по оптовым #[br]ценам и #[strong храним на собственном складе]
 		.economy__wrap.row
 			.economy__item
 				.economy__icon
-					img(src="" alt="")
+					.economy__certificate.e-cert
+						.e-cert__icon
+							img(src="_/uploads/magnifying-glass.png" alt="")
+						.e-cert__img
+							img(src="_/uploads/certificate.png" alt="")
 				.economy__text #[strong Подтверждаем сертификатами,] #[br]что мы напрямую с завода #[br]закупаем материалы
 				.economy__logos.row
 					.economy__logo
-						img(src="" alt="")
+						img(src="_/uploads/knauf.png" alt="")
 					.economy__logo
-						img(src="" alt="")
+						img(src="_/uploads/jetbau.png" alt="")
 					.economy__logo
-						img(src="" alt="")
+						img(src="_/uploads/kreisel.png" alt="")
 
 			.economy__img
-				img(src="" alt="")
+				img(src="_/uploads/pallet.png" alt="")
 
 			.economy__item
 				.economy__icon
-					img(src="" alt="")
-				.economy__text #[strong Некоторые компании могут закупать #[br]подделку или хранить материал #[br]во влажном помещении] #[br] Стоимость таких работ «дешевле», #[br]но после отделки стен и потолков #[br]такая штукатурка потрескается #[br]и отойдет
-				.economy__logos.row
-					.economy__logo
-						img(src="" alt="")
-					.economy__logo
-						img(src="" alt="")
-					.economy__logo
-						img(src="" alt="")
+					img(src="_/uploads/pig.png" alt="")
+				.economy__text #[strong Некоторые компании могут закупать #[br]подделку или хранить материал #[br]во влажном помещении] #[br]#[br] Стоимость таких работ «дешевле», #[br]но после отделки стен и потолков #[br]такая штукатурка потрескается #[br]и отойдет
+
+	.economy__bg.bg
+		img(src="_/uploads/economy-bg.png" alt="")
