--- a/source/dev/_/parts/estimate.pug
+++ b/source/dev/_/parts/estimate.pug
@@ -4,31 +4,35 @@
 			.estimate__subtitle.h2 Вы можете приехать и оценить качество
 			.estimate__title.h1 механизированной #[br]штукатурки на любом #[br]из объектов, #[i где прямо сейчас #[br]ведутся работы]
 		.estimate__img
-			img(src="" alt="")
+			img(src="_/uploads/tool-2.png" alt="")
 		.estimate__imgs
-			.estimate__imgs-wrap
-				.estimate__imgs-list
-					.estimate__imgs-item
+			.estimate__imgs-wrap.swiper-container
+				.estimate__imgs-list.swiper-wrapper
+					.estimate__imgs-item.swiper-slide
 						.estimate__imgs-img
-							img(src="" alt="")
+							img(src="_/uploads/estimate-1.png" alt="")
 						.estimate__imgs-address
+							<svg version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 487.724 487.724" style="enable-background:new 0 0 487.724 487.724;" xml:space="preserve"><path d="M236.925,0.124c-96.9,3.4-177.4,79-186.7,175.5c-1.9,19.3-0.8,38,2.6,55.9l0,0c0,0,0.3,2.1,1.3,6.1	c3,13.4,7.5,26.4,13.1,38.6c19.5,46.2,64.6,123.5,165.8,207.6c6.2,5.2,15.3,5.2,21.6,0c101.2-84,146.3-161.3,165.9-207.7	c5.7-12.2,10.1-25.1,13.1-38.6c0.9-3.9,1.3-6.1,1.3-6.1l0,0c2.3-12,3.5-24.3,3.5-36.9C438.425,84.724,347.525-3.776,236.925,0.124	z M243.825,291.324c-52.2,0-94.5-42.3-94.5-94.5s42.3-94.5,94.5-94.5s94.5,42.3,94.5,94.5S296.025,291.324,243.825,291.324z"/></svg>
 							span г. москва, пр. обуховской обороны, д. 294
-					.estimate__imgs-item
+					.estimate__imgs-item.swiper-slide
 						.estimate__imgs-img
-							img(src="" alt="")
+							img(src="_/uploads/estimate-1.png" alt="")
 						.estimate__imgs-address
+							<svg version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 487.724 487.724" style="enable-background:new 0 0 487.724 487.724;" xml:space="preserve"><path d="M236.925,0.124c-96.9,3.4-177.4,79-186.7,175.5c-1.9,19.3-0.8,38,2.6,55.9l0,0c0,0,0.3,2.1,1.3,6.1	c3,13.4,7.5,26.4,13.1,38.6c19.5,46.2,64.6,123.5,165.8,207.6c6.2,5.2,15.3,5.2,21.6,0c101.2-84,146.3-161.3,165.9-207.7	c5.7-12.2,10.1-25.1,13.1-38.6c0.9-3.9,1.3-6.1,1.3-6.1l0,0c2.3-12,3.5-24.3,3.5-36.9C438.425,84.724,347.525-3.776,236.925,0.124	z M243.825,291.324c-52.2,0-94.5-42.3-94.5-94.5s42.3-94.5,94.5-94.5s94.5,42.3,94.5,94.5S296.025,291.324,243.825,291.324z"/></svg>
 							span г. москва, пр. обуховской обороны, д. 294
-			.estimate__form.form
+			.estimate__form.form.--row
 				.form__inner
 					.form__title Заполните форму ниже #[br]и запишитесь на экскурсию
 					.form__wrap
 						.form__input.input.--md.--bg-gray.--icon.--phone.--required
 							.input__wrap
-								input.input__area(type="number" name="phone" placeholder="+7 ( ___ ) ___ - __ - __")
+								input.input__area(type="tel" name="phone" placeholder="+7 ( ___ ) ___ - __ - __")
 							.input__icon
 						button.form__btn.btn.--md.--bg-blue РАССЧИТАТЬ СТОИМОСТЬ
 					.form__policy Нажимая на кнопку, вы даете согласие #[br]на обработку своих персональных данных #[br]и соглашаетесь с политикой конфиденциальности.
 
 			.estimate__imgs-arrows
 				.estimate__imgs-arrow.btn.arrow.--bg-white.--round.--prev
+					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
 				.estimate__imgs-arrow.btn.arrow.--bg-white.--round.--next
+					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
