--- a/source/dev/_/parts/gifts.pug
+++ b/source/dev/_/parts/gifts.pug
@@ -1,39 +1,41 @@
-.gifts
+.gifts.bg-wrap
 	.case
 		.gifts__title.h1 Дарим ценные #[strong подарки на 10 000 р.] #[br]при заключении договора на замере
 		.gifts__list.row
 			.gifts__item
 				.gifts__img
-					img(src="" alt="")
+					img(src="_/uploads/gift-1.png" alt="")
 				.gifts__text Вывоз мусора
 			.gifts__item
 				.gifts__img
-					img(src="" alt="")
+					img(src="_/uploads/gift-2.png" alt="")
 				.gifts__text Уборка после работ
 			.gifts__item
 				.gifts__img
-					img(src="" alt="")
+					img(src="_/uploads/gift-3.png" alt="")
 				.gifts__text 5 мешков штукатурки #[br]для заделки штор
 			.gifts__item
 				.gifts__img
-					img(src="" alt="")
+					img(src="_/uploads/gift-4.png" alt="")
 				.gifts__text Штукатурка #[br]откосов 2 окон
 			.gifts__item
 				.gifts__img
-					img(src="" alt="")
+					img(src="_/uploads/gift-5.png" alt="")
 				.gifts__text Утепление 1 окна
 
 		.gifts__why.gift-why.row
 			.gift-why__img-wrap
 				.gift-why__img
-					img(src="" alt="")
-				.gift-why__persona.person
+					img(src="_/uploads/voronin-2.png" alt="")
+				.gift-why__person.person
 					.person__icon
-						img(src="" alt="")
+						img(src="_/uploads/avatar.png" alt="")
 					.person__name Михаил #[br]Воронин
 					.person__position Старший #[br]бригадир
 			.gift-why__content
 				.gift-why__quote.quote
 					h3 Почему мы делаем подарки?
 					p Наша задача - приехать на замер, сделать точный расчет стоимости #[br]и заключить договор. Поэтому каждого клиента, который ценит свое #[br]и наше время и заключает договор при замере, мы поощряем #[br]ценными подарками.
-				a.gift-why__btn.btn.--md.--bg-blue(href="") Вызвать замерщика
+				a.gift-why__btn.btn.--md.--bg-blue(href="") ВЫЗВАТЬ ЗАМЕРЩИКА
+	.gifts__bg.bg
+		img(src="_/uploads/gifts-bg.png" alt="")
