--- a/source/dev/_/sys/sass/style.sass
+++ b/source/dev/_/sys/sass/style.sass
@@ -12,7 +12,7 @@
 @import ../../components/select/select
 // @import ../../components/tabs/tabs
 // @import ../../components/popup/popup
-// @import ../../components/slider/slider
+@import ../../components/slider/slider
 // @import ../../components/tog/tog
 
 .icon-arrow-left
@@ -89,6 +89,7 @@ sup
 	letter-spacing: 0.94px
 	text-transform: uppercase
 	font-family: $montserrat
+	margin-left: -3px
 	strong
 		font-weight: 700
 	u
@@ -332,13 +333,14 @@ sup
 		width: 260px
 		height: 260px
 		border-radius: 50%
-		border: 1px solid rgba(0,0,0,0.05)
+		box-shadow: 0 3px 60px rgba(0, 0, 0, 0.08)
+		// border: 1px solid rgba(0,0,0,0.05)
 		transform: translate(-50%, -50%)
 	&__wrap
 		z-index: 1
 		position: relative
 	&__img
-		margin-bottom: 20px
+		margin-bottom: 15px
 		img
 			margin-left: auto
 			margin-right: auto
@@ -346,7 +348,10 @@ sup
 		font-size: 12px
 		line-height: 22px
 		letter-spacing: 0.48px
-		text-transform: uppercase
+		&.--md
+			font-size: 15px
+			line-height: 23px
+
 .first-slide
 	padding-top: 195px
 
@@ -1014,11 +1019,934 @@ sup
 	&__head
 		padding: 74px 50px 42px 40px
 		border-bottom: 1px solid #eee
+	&__title
+		font-size: 16px
+		line-height: 25px
+		font-family: $montserrat
+		text-transform: uppercase
+	&__subtitle
+		opacity: 0.7
 	&__item
 		display: flex
 		align-items: center
+		padding: 10px 0 10px 40px
 		border-bottom: 1px solid #eee
 		&:last-of-type
 			border-bottom: none
+		&:nth-of-type(1)
+			padding-right: 10px
+		&:nth-of-type(3)
+			padding-right: 10px
+		&:nth-of-type(4)
+			padding-right: 10px
 	&__img
 		margin-left: auto
+
+
+.oneday
+	position: relative
+	overflow: hidden
+	.case
+		padding-bottom: 840px
+	&__subtitle
+		margin-top: 100px
+		text-align: center
+		margin-bottom: -10px
+	&__title
+		text-align: center
+		margin-bottom: 60px
+		sup
+			font-size: 0.5em
+	&__list
+		margin-left: -15px
+		margin-right: -15px
+	&__item
+		display: flex
+		align-items: center
+		width: calc(100% / 3 - 30px)
+		height: 130px
+		margin-left: 15px
+		margin-right: 15px
+		background-color: #fff
+		border-radius: 8px
+		line-height: 23px
+		padding-left: 35px
+		padding-right: 10px
+		box-shadow: 0 3px 60px rgba(0, 0, 0, 0.05)
+		&:nth-of-type(1)
+			.oneday
+				&__icon
+					top: 5px
+					margin-right: 20px
+	&__icon
+		position: relative
+		margin-left: auto
+	&__img
+		position: absolute
+		bottom: -110px
+		left: 50%
+		width: 1337px
+		bottom: -210px
+		transform: translateX(-50%)
+	&__round
+		position: absolute
+		left: 50%
+		bottom: 120px
+		transform: translateX(-50%)
+
+
+.fix
+	&__content
+		padding-top: 115px
+		padding-bottom: 60px
+		max-width: 550px
+	&__subtitle
+		font-weight: 400
+	&__title
+		margin-bottom: 23px
+
+
+.warranty
+	&__title
+		font-weight: 700
+		margin-bottom: 18px
+	&__list
+		margin: 0 -10px -20px
+	&__item
+		border-radius: 8px
+		padding: 11px 21px
+		margin: 0 10px 20px
+		border: 1px solid rgb(72,78,81,.1)
+
+.fix
+	&__img
+		z-index: 2
+		position: absolute
+		right: -50px
+		top: 64px
+	&__count
+		z-index: 3
+		display: flex
+		align-items: center
+		flex-direction: column
+		position: absolute
+		right: 50px
+		top: 120px
+		width: 100%
+		max-width: 90px
+		text-align: center
+		&:after
+			content: ''
+			position: absolute
+			top: 100%
+			right: 37px
+			width: 161px
+			height: 95px
+			margin-top: 10px
+			background: url('../imgs/line-2.svg') no-repeat center
+		&-icon
+			margin-bottom: -5px
+			margin-right: -2px
+		&-value
+			font-size: 14px
+			line-height: 22px
+			font-weight: 700
+			text-transform: uppercase
+			font-family: $montserrat
+	&__list
+		z-index: 1
+		position: relative
+		&-wrap
+			border-radius: 8px
+			background-color: #ffffff
+			box-shadow: 0 3px 60px rgba(0, 0, 0, 0.08)
+		&:after
+			z-index: -1
+			position: absolute
+			content: ''
+			top: 10px
+			left: 10px
+			right: 10px
+			bottom: -10px
+			border-radius: 8px
+			background-color: #ffffff
+			box-shadow: 0 3px 60px rgba(0, 0, 0, 0.08)
+	&__item
+		display: flex
+		flex-direction: column
+		align-items: center
+		width: calc(100% / 4)
+		padding: 75px 10px 75px
+		border-right: 1px solid #eee
+		text-align: center
+	&__icon
+		display: flex
+		align-items: flex-end
+		height: 114px
+		position: relative
+		margin-bottom: 35px
+	&__name
+		font-size: 14px
+		font-weight: 500
+		line-height: 24px
+		text-transform: uppercase
+		font-family: $montserrat
+		margin-bottom: 6px
+	&__text
+		opacity: 0.9
+		font-size: 14px
+		line-height: 23px
+		a
+			color: $blue
+			border-bottom: 1px dashed $blue
+			&:hover
+				border-color: transparent
+
+
+.form
+	padding-left: 70px
+	padding-right: 70px
+	&__title
+		font-size: 16px
+		font-weight: 700
+		letter-spacing: 0.32px
+		margin-bottom: 25px
+		font-family: $montserrat
+		text-transform: uppercase
+	&__wrap
+		display: flex
+		flex-wrap: wrap
+	&__policy
+		opacity: 0.5
+		font-size: 12px
+		line-height: 19px
+		margin-top: 25px
+	&.--line
+		.form
+			&__wrap
+				margin-left: -15px
+				margin-right: -15px
+			&__input, &__btn
+				width: calc(100% / 2 - 30px)
+				margin-left: 15px
+				margin-right: 15px
+	&.--row
+		.form
+			&__title
+				text-align: center
+				margin-left: -20px
+				margin-right: -20px
+			&__input
+				width: 100%
+				margin-bottom: 20px
+			&__btn
+				width: 100%
+				&.btn
+					padding-left: 15px
+					padding-right: 15px
+			&__policy
+				margin-left: -15px
+				margin-right: -15px
+				text-align: center
+
+.ready
+	&__content
+		width: 100%
+		max-width: 670px
+		margin-left: auto
+		padding-top: 110px
+	&__title
+		margin-bottom: 20px
+	&__list
+		margin-left: -10px
+		margin-right: -10px
+		margin-bottom: -35px
+	&__item
+		width: 50%
+		display: flex
+		align-items: center
+		padding-left: 10px
+		padding-right: 10px
+		margin-bottom: 35px
+		&.--full
+			width: 100%
+		&:nth-of-type(2)
+			.ready
+				&__icon
+					margin-left: -30px
+					margin-right: 0
+	&__icon
+		position: relative
+		top: 5px
+		margin-right: 12px
+	&__text
+		line-height: 23px
+	&__form
+		margin-top: 60px
+		position: relative
+		border-radius: 8px
+		background-color: #ffffff
+		padding: 0
+		box-shadow: 0 3px 60px rgba(0, 0, 0, 0.08)
+		.form
+			&__img
+				position: absolute
+				bottom: 0
+				left: -42px
+			&__inner
+				width: 100%
+				max-width: 670px
+				padding: 66px 100px 65px 0
+				margin-left: auto
+			&__btn
+				&.btn
+					padding-left: 20px
+					padding-right: 20px
+
+
+.whatsapp
+	margin-top: 62px
+	&__title
+		width: 100%
+		max-width: 375px
+		margin-top: 40px
+	&__img
+		margin-left: 50px
+	&__content
+		width: 100%
+		max-width: 480px
+		margin-left: auto
+		padding-top: 50px
+	&__subtitle
+		text-transform: uppercase
+		position: relative
+		letter-spacing: 0.36px
+		font-family: $montserrat
+		&:after
+			content: ''
+			position: absolute
+			bottom: -62px
+			right: 128px
+			width: 68px
+			height: 63px
+			background: url('../imgs/line-3.svg') no-repeat center
+		img
+			width: 15px
+			display: inline-block
+			vertical-align: middle
+			margin-left: 4px
+			margin-right: 2px
+			position: relative
+			top: -2px
+	&__btn
+		display: inline-flex
+		margin-top: 20px
+
+
+.de
+	z-index: 2
+	padding-top: 100px
+	padding-bottom: 80px
+	position: relative
+	&:after
+		content: ''
+		bottom: -112px
+		left: 0
+		right: 0
+		width: 100%
+		height: 112px
+		position: absolute
+		background: url('../imgs/de-bg-shadow.png') no-repeat
+
+	&__img-wrap
+		position: relative
+		padding-top: 14px
+		width: calc(100% - 570px)
+		padding-left: 57px
+	&__img
+		z-index: 2
+		position: relative
+		
+	&__round
+		z-index: 1
+		position: absolute
+		top: 4px
+		left: 0
+		
+	&__content
+		width: 100%
+		max-width: 570px
+		padding-top: 7px
+	&__title
+		img
+			display: inline-block
+			vertical-align: middle
+			position: relative
+			top: -3px
+	&__subtitle
+		margin-bottom: 49px
+	&__photos
+		margin-top: 30px
+		margin: 30px -15px -30px
+	&__photo
+		z-index: 1
+		position: relative
+		width: calc(100% / 2 - 30px)
+		height: 170px
+		margin-left: 15px
+		margin-right: 15px
+		position: relative
+		border-radius: 5px
+		&:before
+			content: ''
+			position: absolute
+			top: 5px
+			left: 5px
+			right: 5px
+			bottom: 5px
+			border-radius: 5px
+			border: 1px solid rgba(255,255,255,.35)
+		&:after
+			z-index: -2
+			content: ''
+			position: absolute
+			bottom: -13px
+			left: -6px
+			right: -6px
+			width: 281px
+			height: 24px
+			background: url('../imgs/de-photo-shadow.png') no-repeat center
+		img
+			width: 100%
+			height: 100%
+			object-fit: cover
+.quality
+	display: flex
+	align-items: center
+	background-color: #fff
+	border-radius: 8px
+	padding: 37px 80px 37px 42px
+	&__icon
+		width: 76px
+		margin-top: -27px
+		img
+			width: 107px
+			max-width: none !important
+	&__text
+		width: calc(100% - 76px)
+		padding-left: 40px
+
+	&__title
+		font-size: 14px
+		line-height: 24px
+		font-weight: 500
+		text-transform: uppercase
+		font-family: $montserrat
+		letter-spacing: 0.56px
+		margin-bottom: 5px
+	&__desc
+		font-size: 14px
+		line-height: 23px
+		opacity: 0.9
+
+	
+.economy
+	padding-top: 120px
+	min-height: 835px
+	&__title
+		text-align: center
+		margin-bottom: 12px
+	&__subtitle
+		text-align: center
+		margin-bottom: 135px
+		text-transform: uppercase
+		font-size: 16px
+		line-height: 28px
+		font-family: $montserrat
+	&__wrap
+		background: #fff
+		position: relative
+		justify-content: space-between
+	&__item
+		width: 360px
+		padding-bottom: 45px
+	&__img
+		z-index: 7
+		position: absolute
+		top: 50%
+		left: 50%
+		transform: translate(-50%, -50%)
+	&__icon
+		display: flex
+		align-items: flex-end
+		justify-content: center
+		height: 114px
+		margin-top: -70px
+		margin-bottom: 25px
+	&__text
+		line-height: 23px
+		text-align: center
+	&__logos
+		max-width: 200px
+		justify-content: center
+		margin-top: 15px
+		margin-left: auto
+		margin-right: auto
+		margin-bottom: -12px
+	&__logo
+		padding: 0 16px
+		display: flex
+		align-items: center
+		justify-content: center
+		height: 40px
+		border-radius: 8px
+		margin-left: 6px
+		margin-right: 6px
+		margin-bottom: 12px
+		border: 1px solid rgba(72,78,81,.1)
+		
+
+.e-cert
+	position: relative
+	&__icon
+		display: flex
+		align-items: center
+		justify-content: center
+		width: 34px
+		height: 34px
+		border-radius: 50%
+		background-color: $blue
+		position: absolute
+		top: 50%
+		left: -17px
+		transform: translateY(-50%)
+	&__img
+		display: inline-flex
+		border: 4px solid #fff
+		box-shadow: 0 3px 20px rgba(0, 0, 0, 0.09)
+		cursor: pointer
+
+
+.foreman
+	// z-index: 3
+	// position: relative
+	// margin-top: -400px
+	.case
+		display: flex
+		flex-direction: column
+	&__wrap
+		align-items: flex-end
+		min-height: 850px
+	&__img-wrap
+		position: relative
+		width: calc(100% - 570px)
+		max-height: 790px
+		overflow: hidden
+	&__person
+		position: absolute
+		top: 118px
+		left: 0
+		&:before
+			content: ''
+			top: 15px
+			right: -117px
+			position: absolute
+			width: 137px
+			height: 100px
+			background: url('../imgs/line-1.svg')
+	&__img
+		margin-left: 71px
+	&__content
+		width: 100%
+		max-width: 570px
+		margin-left: auto
+		padding-bottom: 120px
+	&__desc
+		font-size: 16px
+		font-family: $montserrat
+		text-transform: uppercase
+		margin-top: 14px
+	&__report
+		margin-top: 25px
+	&__quote
+		display: flex
+		align-items: center
+		z-index: 1
+		position: relative
+		border-radius: 8px
+		padding: 30px
+		background-color: #ffffff
+		&:before
+			content: ''
+			position: absolute
+			top: 44px
+			left: -17px
+			width: 0
+			height: 0
+			border-style: solid
+			border-width: 0 17px 22px 0
+			border-color: transparent #ffffff transparent transparent
+
+		&-icon
+			position: relative
+			width: 50px
+			height: 50px
+			font-size: 0
+			img
+				position: absolute
+				top: 50%
+				left: 50%
+				width: 76px
+				height: 76px
+				max-width: none !important
+				max-height: none !important
+				transform: translate(-50%, -50%)
+		&-text
+			opacity: 0.85
+			font-size: 14px
+			line-height: 27px
+			padding-left: 17px
+	&__btn
+		display: inline-flex
+		margin-top: 40px
+	&__bg
+		img
+			object-position: center bottom
+
+
+.report
+	display: flex
+	flex-wrap: wrap
+	// align-items: center
+	&__img
+		margin-bottom: -36px
+		margin-left: 19px
+		margin-right: -19px
+	&__text
+		padding-top: 14px
+	
+
+.objects
+	padding-top: 112px
+	padding-bottom: 122px
+	&__title
+		margin-left: auto
+		margin-right: auto
+		text-align: center
+		margin-bottom: 16px
+	&__subtitle
+		text-align: center
+		margin-bottom: 65px
+	&__item
+		margin-bottom: 50px
+
+.object
+	display: flex
+	flex-wrap: wrap
+	padding: 40px
+	box-shadow: 0 3px 60px rgba(0, 0, 0, 0.08)
+	border-radius: 8px
+	background-color: #ffffff
+	&:nth-of-type(odd)
+		.object
+			&__content
+				padding-left: 30px
+	&:nth-of-type(even)
+		.object
+			&__content
+				order: 2
+				padding-left: 70px
+				
+	&__content
+		padding-top: 25px
+		width: calc(100% - 530px)
+	&__name
+		font-size: 16px
+		line-height: 26px
+		font-weight: 500
+		text-transform: uppercase
+		font-family: $montserrat
+		max-width: 380px
+		letter-spacing: 0.32px
+		margin-bottom: 30px
+	&__imgs
+		width: 530px
+
+	&__btns
+		margin-top: 40px
+		align-items: center
+	&__more
+		margin-left: 30px
+		display: flex
+		img
+			width: 14px
+			min-width: 14px
+			margin-right: 9px
+		span
+			white-space: nowrap
+			transition: .3s
+		&:hover
+			span
+				color: $blue
+.imgs
+	position: relative
+	&__list
+		border-radius: 8px
+		&-item
+			height: 425px
+			overflow: hidden
+			img
+				width: 100%
+				height: 100%
+				object-fit: cover
+	&__thumbs
+		position: absolute
+		left: 20px
+		right: 20px
+		bottom: 20px
+		&-item
+			height: 85px
+			border-radius: 8px
+			overflow: hidden
+			position: relative
+			cursor: pointer
+			img
+				width: 100%
+				height: 100%
+				object-fit: cover
+			&:before, &:after
+				content: ''
+				position: absolute
+				top: 0
+				left: 0
+				right: 0
+				bottom: 0
+				border-radius: 8px
+				transition: .3s
+			&:before
+				opacity: 0
+				border: 1px solid #fff
+			&:after
+				opacity: 0.5
+				background-color: #484e51
+			&.swiper-slide-thumb-active
+				&:before
+					opacity: 1
+				&:after
+					opacity: 0
+
+.data
+	&__list
+		margin-left: -20px
+		margin-right: -20px
+		margin-bottom: -35px
+	&__item
+		display: flex
+		margin-bottom: 35px
+		margin-left: 20px
+		margin-right: 20px
+		&.--full
+			width: 100%
+	&__icon
+		width: 22px
+		padding-top: 1px
+		padding-right: 9px
+
+	&__text
+		width: calc(100% - 22px)
+	&__title
+		font-size: 12px
+		font-weight: 700
+		letter-spacing: 0.48px
+		text-transform: uppercase
+		margin-bottom: 3px
+	&__value
+		font-size: 16px
+
+
+.btn-more
+	&__wrap
+		flex-direction: column
+		margin-left: auto
+		margin-right: auto
+		&:hover
+			.btn-more
+				&__icon
+					path
+						fill: $blue
+						opacity: 1
+				&__text
+					color: $blue
+					border-color: $blue
+	&__icon
+		width: 22px
+		margin-bottom: 21px
+		path
+			fill: $black
+			opacity: 0.4
+	&__text
+		font-size: 13px
+		font-weight: 700
+		text-transform: uppercase
+		border-bottom: 1px dotted $black
+		transition: .3s
+
+.arrow
+	z-index: 10
+	display: flex
+	align-items: center
+	justify-content: center
+	width: 70px
+	height: 70px
+	background-color: #fff
+	border-radius: 50%
+	font-size: 0
+	position: absolute
+	top: 50%
+	transform: translateY(-50%)
+	box-shadow: 0 3px 60px rgba(0, 0, 0, 0.05)
+	svg
+		width: 20px
+		height: 20px
+		transition: .3s
+		opacity: 0.35
+	&.--prev
+		left: -100px
+		svg
+			margin-right: 2px
+			transform: rotate(180deg)
+	&.--next
+		right: -100px
+		svg
+			margin-left: 2px
+
+.estimate
+	background-color: #f4f4f4
+	padding-top: 90px
+	&__title
+		i
+			font-size: 16px
+			line-height: 26px
+			max-width: 190px
+			display: inline-block
+			vertical-align: middle
+	&__img
+		position: absolute
+		top: -157px
+		right: 73px
+
+	&__imgs
+		position: relative
+		margin-top: 70px
+		&-item
+			height: 535px
+			border-radius: 8px
+			overflow: hidden
+		&-address
+			z-index: 3
+			position: absolute
+			bottom: 65px
+			left: 69px
+			right: 600px
+			display: flex
+			align-items: center
+			svg
+				width: 11px
+				min-width: 11px
+			path
+				fill: #4caf50
+			span
+				font-size: 14px
+				color: #fff
+				font-family: $montserrat
+				text-transform: uppercase
+				margin-left: 11px
+		&-img
+			height: 100%
+			img
+				z-index: 1
+				position: relative
+				width: 100%
+				height: 100%
+				object-fit: cover
+			&:before
+				z-index: 2
+				content: ''
+				height: 195px
+				left: 0
+				right: 0
+				bottom: 0
+				position: absolute
+				background: linear-gradient(0deg, rgba(0,0,0,0.5) 0%, rgba(255,255,255,0) 100%)
+	&__form
+		z-index: 5
+		position: absolute
+		top: 50%
+		right: 50px
+		width: 100%
+		max-width: 410px
+		border-radius: 8px
+		background-color: #fff
+		padding-top: 65px
+		padding-bottom: 65px
+		transform: translateY(-50%)
+		box-shadow: 0 3px 60px rgba(0, 0, 0, 0.08)
+
+
+.gifts
+	padding-top: 103px
+	background-color: #f4f4f4
+	&__title
+		text-align: center
+		margin-bottom: 32px
+	&__list
+		margin-left: -5px
+		margin-right: -5px
+	&__item
+		width: calc(100% / 5 - 10px)
+		margin-left: 5px
+		margin-right: 5px
+	&__img
+		display: flex
+		align-items: center
+		justify-content: center
+		height: 128px
+		margin-bottom: 15px
+	&__text
+		font-size: 14px
+		font-weight: 500
+		line-height: 24px
+		font-family: $montserrat
+		text-transform: uppercase
+		text-align: center
+	&__bg
+		img
+			object-position: center bottom
+
+.gift-why
+	padding-top: 36px
+	&__img-wrap
+		position: relative
+		width: calc(100% - 580px)
+		max-height: 555px
+		overflow: hidden
+	&__person
+		position: absolute
+		top: 90px
+		left: 0
+		&:before
+			content: ''
+			top: 11px
+			right: -117px
+			position: absolute
+			width: 145px
+			height: 110px
+			background: url('../imgs/line-4.svg') no-repeat center
+	&__img
+		margin-left: 80px
+	&__content
+		width: 580px
+		padding-top: 100px
+	&__btn
+		margin-top: 50px
+		display: inline-flex
